# skateopt

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  use_repo.sh
cmake/: CopyIfExists.cmake  MakeHeaders.cmake  OptionDependentOnPackage.cmake
demos/: CMakeLists.txt
demos/rigid_alignment/: CMakeLists.txt  main.cpp
demos/rosenbrock/: CMakeLists.txt  main.cpp
include/skateopt/: config.h  config.h.cmake  skateopt.h  skateopt.hpp
src/: CMakeLists.txt
